[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onne"
version = "0.1.0"
description = "Refactor of the original ONNE codebase"
readme = "README.rst"
authors = [
  {name = "Nick Marcella", email = "nickj800@gmail.com"}
]
maintainers = [
  {name = "Nick Marcella", email = "nickj800@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/nmarcella/onne/issues"
changelog = "https://github.com/nmarcella/onne/blob/master/changelog.md"
homepage = "https://github.com/nmarcella/onne"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

